--- a/vtools/Aspect/Makefile
+++ b/vtools/Aspect/Makefile
@@ -17,9 +17,7 @@ include $(CCORE_ROOT)/Makefile.host
 
 SRC_PATH_LIST = src
 
-TARGET = ./CCore-Aspect.exe 
-
-# $(HOME)/bin/CCore-Aspect.exe
+TARGET = $(HOME)/bin/CCore-Aspect.exe 
 
 CCOPT_EXTRA = -I.
 
