--- a/vtools/BookLab/Makefile
+++ b/vtools/BookLab/Makefile
@@ -32,6 +32,10 @@ run: $(TARGET)
 
 TypeSet = $(HOME)/bin/CCore-DDLTypeSet.exe
 
+MakeString = $(HOME)/bin/CCore-MakeString.exe
+
 inc/Book1.TypeDef.gen.h : docs/Book1.ddl
 	$(TypeSet) docs/Book1.ddl inc/Book1.TypeDef.gen.h src/Book1.TypeSet.gen.h Font Bitmap
 
+src/./Book1.gen.cpp : docs/Book1.ddl
+	$(MakeString) -s docs/Book1.ddl src/Book1.gen.cpp
