--- a/vtools/BookLab/Makefile.files
+++ b/vtools/BookLab/Makefile.files
@@ -5,6 +5,7 @@ OBJ_LIST = \
 .obj/BookWindow.o \
 .obj/Client.o \
 .obj/DrawBook.o \
+.obj/DrawBookTools.o \
 .obj/SpanLenEngine.o \
 .obj/WorkWindow.o \
 .obj/main.o \
@@ -17,6 +18,7 @@ ASM_LIST = \
 .obj/BookWindow.s \
 .obj/Client.s \
 .obj/DrawBook.s \
+.obj/DrawBookTools.s \
 .obj/SpanLenEngine.s \
 .obj/WorkWindow.s \
 .obj/main.s \
@@ -29,6 +31,7 @@ DEP_LIST = \
 .obj/BookWindow.dep \
 .obj/Client.dep \
 .obj/DrawBook.dep \
+.obj/DrawBookTools.dep \
 .obj/SpanLenEngine.dep \
 .obj/WorkWindow.dep \
 .obj/main.dep \
@@ -56,6 +59,9 @@ include $(RULES_FILE)
 	$(CC) $(CCOPT) $< -o $@
 
 .obj/DrawBook.o : src/./DrawBook.cpp
+	$(CC) $(CCOPT) $< -o $@
+
+.obj/DrawBookTools.o : src/./DrawBookTools.cpp
 	$(CC) $(CCOPT) $< -o $@
 
 .obj/SpanLenEngine.o : src/./SpanLenEngine.cpp
@@ -87,6 +93,9 @@ include $(RULES_FILE)
 .obj/DrawBook.s : src/./DrawBook.cpp
 	$(CC) -S $(CCOPT) $< -o $@
 
+.obj/DrawBookTools.s : src/./DrawBookTools.cpp
+	$(CC) -S $(CCOPT) $< -o $@
+
 .obj/SpanLenEngine.s : src/./SpanLenEngine.cpp
 	$(CC) -S $(CCOPT) $< -o $@
 
@@ -115,6 +124,9 @@ include $(RULES_FILE)
 
 .obj/DrawBook.dep : src/./DrawBook.cpp
 	$(CC) $(CCOPT) -MM -MT .obj/DrawBook.o $< -MF $@
+
+.obj/DrawBookTools.dep : src/./DrawBookTools.cpp
+	$(CC) $(CCOPT) -MM -MT .obj/DrawBookTools.o $< -MF $@
 
 .obj/SpanLenEngine.dep : src/./SpanLenEngine.cpp
 	$(CC) $(CCOPT) -MM -MT .obj/SpanLenEngine.o $< -MF $@
