--- a/vtools/BookLab/Makefile.files
+++ b/vtools/BookLab/Makefile.files
@@ -1,6 +1,7 @@
 OBJ_LIST = \
 .obj/App.o \
 .obj/Application.o \
+.obj/BookLab.o \
 .obj/Client.o \
 .obj/EditWindow.o \
 .obj/main.o \
@@ -9,6 +10,7 @@ OBJ_LIST = \
 ASM_LIST = \
 .obj/App.s \
 .obj/Application.s \
+.obj/BookLab.s \
 .obj/Client.s \
 .obj/EditWindow.s \
 .obj/main.s \
@@ -17,6 +19,7 @@ ASM_LIST = \
 DEP_LIST = \
 .obj/App.dep \
 .obj/Application.dep \
+.obj/BookLab.dep \
 .obj/Client.dep \
 .obj/EditWindow.dep \
 .obj/main.dep \
@@ -32,6 +35,9 @@ include $(RULES_FILE)
 	$(CC) $(CCOPT) $< -o $@
 
 .obj/Application.o : src/./Application.cpp
+	$(CC) $(CCOPT) $< -o $@
+
+.obj/BookLab.o : src/./BookLab.cpp
 	$(CC) $(CCOPT) $< -o $@
 
 .obj/Client.o : src/./Client.cpp
@@ -51,6 +57,9 @@ include $(RULES_FILE)
 .obj/Application.s : src/./Application.cpp
 	$(CC) -S $(CCOPT) $< -o $@
 
+.obj/BookLab.s : src/./BookLab.cpp
+	$(CC) -S $(CCOPT) $< -o $@
+
 .obj/Client.s : src/./Client.cpp
 	$(CC) -S $(CCOPT) $< -o $@
 
@@ -67,6 +76,9 @@ include $(RULES_FILE)
 
 .obj/Application.dep : src/./Application.cpp
 	$(CC) $(CCOPT) -MM -MT .obj/Application.o $< -MF $@
+
+.obj/BookLab.dep : src/./BookLab.cpp
+	$(CC) $(CCOPT) -MM -MT .obj/BookLab.o $< -MF $@
 
 .obj/Client.dep : src/./Client.cpp
 	$(CC) $(CCOPT) -MM -MT .obj/Client.o $< -MF $@
