--- a/vtools/BookLab/Makefile
+++ b/vtools/BookLab/Makefile
@@ -21,7 +21,7 @@ TARGET = ./CCore-BookLab.exe
 
 CCOPT_EXTRA = -I.
 
-# TARGET_DESKTOP = yes
+TARGET_DESKTOP = yes
 
 include $(CCORE_ROOT)/Target/Makefile.app
 
