--- a/vtools/BookLab/Makefile.files
+++ b/vtools/BookLab/Makefile.files
@@ -12,6 +12,7 @@ OBJ_LIST = \
 .obj/EditWindow.o \
 .obj/FieldEditor.o \
 .obj/InsWindow.o \
+.obj/SingleRoom.o \
 .obj/TempWindow.o \
 .obj/main.o \
 
@@ -30,6 +31,7 @@ ASM_LIST = \
 .obj/EditWindow.s \
 .obj/FieldEditor.s \
 .obj/InsWindow.s \
+.obj/SingleRoom.s \
 .obj/TempWindow.s \
 .obj/main.s \
 
@@ -48,6 +50,7 @@ DEP_LIST = \
 .obj/EditWindow.dep \
 .obj/FieldEditor.dep \
 .obj/InsWindow.dep \
+.obj/SingleRoom.dep \
 .obj/TempWindow.dep \
 .obj/main.dep \
 
@@ -97,6 +100,9 @@ include $(RULES_FILE)
 .obj/InsWindow.o : src/./InsWindow.cpp
 	$(CC) $(CCOPT) $< -o $@
 
+.obj/SingleRoom.o : src/./SingleRoom.cpp
+	$(CC) $(CCOPT) $< -o $@
+
 .obj/TempWindow.o : src/./TempWindow.cpp
 	$(CC) $(CCOPT) $< -o $@
 
@@ -142,6 +148,9 @@ include $(RULES_FILE)
 	$(CC) -S $(CCOPT) $< -o $@
 
 .obj/InsWindow.s : src/./InsWindow.cpp
+	$(CC) -S $(CCOPT) $< -o $@
+
+.obj/SingleRoom.s : src/./SingleRoom.cpp
 	$(CC) -S $(CCOPT) $< -o $@
 
 .obj/TempWindow.s : src/./TempWindow.cpp
@@ -190,6 +199,9 @@ include $(RULES_FILE)
 
 .obj/InsWindow.dep : src/./InsWindow.cpp
 	$(CC) $(CCOPT) -MM -MT .obj/InsWindow.o $< -MF $@
+
+.obj/SingleRoom.dep : src/./SingleRoom.cpp
+	$(CC) $(CCOPT) -MM -MT .obj/SingleRoom.o $< -MF $@
 
 .obj/TempWindow.dep : src/./TempWindow.cpp
 	$(CC) $(CCOPT) -MM -MT .obj/TempWindow.o $< -MF $@
