--- a/vtools/BookLab/Makefile
+++ b/vtools/BookLab/Makefile
@@ -17,7 +17,7 @@ include $(CCORE_ROOT)/Makefile.host
 
 SRC_PATH_LIST = src
 
-TARGET = ./CCore-BookLab.exe
+TARGET = $(HOME)/bin/CCore-BookLab.exe
 
 CCOPT_EXTRA = -I.
 
